# bAssist

./: Cargo.toml  INSTALLATION.md  README.md  ROLLBACK.md  UNINSTALL.md  UPGRADE.md  install.sh
data/: commands.json  devops_commands.json
src/: lib.rs  main.rs
src/alias/: manager.rs  mod.rs
src/context/: detector.rs  mod.rs
src/core/: command_db.rs  history.rs  matcher.rs  mod.rs
src/execution/: executor.rs  mod.rs
src/safety/: mod.rs  safety_checker.rs
src/tui/: components.rs  interface.rs  mod.rs
src/utils/: config.rs  mod.rs
